@@ -3,6 +3,8 @@
 	- fix possible crash (Grant McDorman)
 	- fix 64bit usage of Xft (Marcus Meissner)
 	- cleanup warning on still-open file descriptors
+        - disabled some Ctrl+Alt+Del commands by default since
+          they need some configuring to work on all systems
 
 1.2.20: 2005-01-09
 	- fix+revert default binding for MouseWinMove an MouseWinSize
